<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="2"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context="com.applid.milijunas_2021.MainActivity">



    <RelativeLayout
        android:layout_width="1dp"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:padding="20dp"
            android:id="@+id/main_logo"
            android:src="@drawable/ipad__nexus_9__1"
            android:layout_margin="10dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:background="@drawable/button"
            android:layout_height="30dp"
            android:layout_marginRight="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="35dp">
            <Switch
                android:layout_width="wrap_content"
                android:id="@+id/music_on_off"
                android:checked="true"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/sound"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:layout_height="match_parent" />

        </LinearLayout>

<ImageView
    android:id="@+id/translation_icon"
    android:layout_width="38dp"
    android:layout_height="38dp"
    android:onClick="openTranslateDialog"
    android:layout_alignParentBottom="true"
    android:layout_marginLeft="10dp"
    android:src="@drawable/translation_icon"
    android:layout_marginStart="10dp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="1dp"
        android:gravity="center"
        android:padding="30dp"
        android:weightSum="7"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/start_game"
            android:textColor="@drawable/white_text_color"
            android:background="@drawable/button"
            android:onClick="openStudio"
            android:layout_height="1dp" />



        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/highest_score"
            android:id="@+id/best_score_button"
            android:onClick="openScore"
            android:layout_margin="5dp"
            android:textColor="@drawable/white_text_color"
            android:background="@drawable/button"
            android:layout_height="1dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/kreiraj_pitanje"
            android:id="@+id/create_question"
            android:onClick="openCreate"
            android:layout_margin="5dp"
            android:textColor="@drawable/white_text_color"
            android:background="@drawable/button"
            android:layout_height="1dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/other_programs"
            android:id="@+id/other_apps"
            android:onClick="openOtherAppsActivity"
            android:layout_margin="5dp"
            android:textColor="@drawable/white_text_color"
            android:background="@drawable/button"
            android:layout_height="1dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:onClick="openOtherApps"
            android:text="@string/zasluge"
            android:textColor="@drawable/white_text_color"
            android:background="@drawable/button"
            android:layout_height="1dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:onClick="quit"
            android:text="@string/quit"
            android:textColor="@drawable/white_text_color"
            android:background="@drawable/button"
            android:layout_height="1dp" />


    </LinearLayout>

</LinearLayout>