<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="bottom"
    android:minHeight="450dp"
    android:minWidth="1000dp"
    android:orientation="vertical"
    android:weightSum="6">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/withdraw_sure"
        android:fontFamily="sans-serif-black"
        android:background="@drawable/questions_box_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="1dp"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:id="@+id/yes_button"
            android:layout_marginRight="10dp"
            android:textColor="@drawable/white_text_color"
            android:background="@drawable/red_button"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:textAllCaps="false"
            android:layout_width="1dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:id="@+id/no_button"
            android:layout_marginLeft="10dp"
            android:textColor="@drawable/white_text_color"
            android:background="@drawable/black_border_button"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>