<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="30dp"
    android:paddingTop="10dp"
    android:paddingRight="30dp"
    tools:context="com.applid.milijunas_2021.ScoreListHelper">

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/highest_score"
        android:textColor="@android:color/white"
        android:background="@drawable/questions_box_border"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_height="match_parent">


        <ListView
            android:layout_weight="3"
            android:layout_width="1dp"
            android:background="#aa000000"
            android:layout_marginBottom="20dp"
            android:id="@+id/score_list"
            android:layout_height="match_parent"></ListView>

        <LinearLayout
            android:layout_width="1dp"
            android:paddingLeft="10dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/scoreExit"
                android:background="@drawable/black_border_button"
                android:gravity="center"
                android:text="@string/exit"
                android:onClick="exit"
                android:textAllCaps="false"
                android:layout_marginBottom="18dp"
                android:textColor="@drawable/white_text_color"
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/black_border_button"
                android:gravity="center"
                android:text="@string/clearall"
                android:onClick="clear"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"
                android:textColor="@drawable/white_text_color"
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                ads:adSize="BANNER"
                android:layout_marginTop="40dp"
                ads:adUnitId="ca-app-pub-2281074336539826/8058792539">
            </com.google.android.gms.ads.AdView>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
